syntax = "proto3";

package fdb_rl_test.protobuf.well_formed_message_descriptor.evolution.v1;

import "fdb_rl/field/v1/field.proto";

message HelloWorld {
  optional fdb_rl.field.v1.UUID primary_key = 1;
  optional string hello = 2;
}
